# nse-agentic-ai

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  journal.csv  pyproject.toml
src/nse_agentic_trader/: app.py  checklist.py  comparison.py  config.py  config_tools.py  costs.py  data_quality.py  execution.py  filters.py  instruments.py  journal.py  market_data.py  models.py  postmarket.py  reports.py  session.py
src/nse_agentic_trader/agent/: __init__.py  decision.py  regime.py  reviewer.py  selector.py
src/nse_agentic_trader/broker/: __init__.py  angel.py  paper.py
src/nse_agentic_trader/risk/: __init__.py  manager.py  state.py
src/nse_agentic_trader/strategy/: __init__.py  base.py  failed_breakout.py  helpers.py  mean_reversion.py  momentum.py  opening_range.py  options.py  registry.py  trend.py  vwap.py
tests/: test_checklist.py  test_comparison.py  test_config_tools.py  test_costs.py  test_data_quality.py  test_execution.py  test_filters.py  test_instruments.py  test_market_data.py  test_paper_broker.py  test_postmarket.py  test_regime_agent.py  test_reports.py  test_reviewer.py  test_risk_manager.py  test_session.py  test_strategy_registry.py  test_strategy_selector_agent.py
